# steam-vent

./: .gitignore  Cargo.toml  README.md  flake.nix
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml
crypto/: Cargo.toml
examples/: access_token.rs  auth_ticket.rs  backpack.rs  chat.rs  inventory.rs  product_info.rs
protobuf/: Cargo.toml  README.md
protobuf/common/: Cargo.toml
protobuf/common/src/: lib.rs
protobuf/csgo/: Cargo.toml
protobuf/csgo/src/: lib.rs
protobuf/dota2/: Cargo.toml
protobuf/dota2/src/: lib.rs
protobuf/steam/: Cargo.toml
protobuf/tf2/: Cargo.toml
protobuf/tf2/src/: lib.rs
src/: game_coordinator.rs  lib.rs  message.rs  net.rs  serverlist.rs  session.rs
src/auth/: confirmation.rs  mod.rs
src/connection/: filter.rs  mod.rs  raw.rs  unauthenticated.rs
src/game_coordinator/: handshake.rs  mod.rs
src/transport/: tcp.rs  websocket.rs
