[package]
name = "steam-vent"
version = "0.4.0"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2021"
description = "Interact with the Steam network via rust"
license = "MIT"
repository = "https://github.com/icewind1991/steam-vent"
rust-version = "1.75.0"

[dependencies]
steam-vent-proto = { version = "0.5", path = "./protobuf" }
steam-vent-crypto = { version = "0.2", path = "./crypto" }
tokio = { version = "1.45.1", features = ["net", "io-util", "macros", "io-std"] }
tokio-util = { version = "0.7.15", features = ["codec"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
binread = "2.2.0"
thiserror = "2"
bytes = "1.10.1"
protobuf = "=3.7.2"
bytemuck = { version = "1.23.1", features = ["derive"] }
crc = "3.3.0"
byteorder = "1.5.0"
flate2 = "1.1.2"
steamid-ng = "2.0.0"
futures-util = { version = "0.3.31", features = ["sink"] }
dashmap = "6.1.0"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
reqwest = { version = "0.12.20", default-features = false, features = ["json", "rustls-tls", "socks"] }
rsa = "0.9.8"
num-traits = "0.2.19"
num-bigint-dig = "0.8.4"
base64 = "0.22.1"
num_enum = "0.7.3"
directories = "6"
another-steam-totp = "0.3.5"
async-stream = "0.3.6"
rand = "0.8.5"
reqwest-websocket = "0.5"

[workspace]
exclude = ["protobuf/build"]
