[package]
name = "steam-vent"
version = "0.4.1"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2024"
description = "Interact with the Steam network via rust"
license = "MIT"
repository = "https://codeberg.org/steam-vent/steam-vent"
rust-version = "1.85.0"

[dependencies]
steam-vent-proto = "0.5"
steam-vent-crypto = { version = "0.2", path = "./crypto" }
tokio = { version = "1.47.1", features = ["net", "io-util", "macros", "io-std"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
rustls = "0.23.31"
webpki-roots = "1.0.2"
binrw = "0.15.0"
thiserror = "2.0.16"
bytes = "1.10.1"
protobuf = "=3.5.1"
bytemuck = { version = "1.23.2", features = ["derive"] }
crc = "3.3.0"
byteorder = "1.5.0"
flate2 = "1.1.2"
steamid-ng = "2.0.0"
futures-util = { version = "0.3.31", features = ["sink"] }
dashmap = "6.1.0"
tracing = "0.1.41"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "rustls-tls"] }
rsa = "0.9.8"
num-traits = "0.2.19"
num-bigint-dig = "0.8.4"
base64 = "0.22.1"
num_enum = "0.7.4"
directories = "6.0.0"
another-steam-totp = "0.4.2"
async-stream = "0.3.6"
rand = "0.9.2"

[dev-dependencies]
tokio = { version = "1.47", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.20"
vdf-reader = "0.3.1"

[features]
tf2 = ["steam-vent-proto/tf2"]
csgo = ["steam-vent-proto/csgo"]
dota2 = ["steam-vent-proto/dota2"]

[[example]]
name = "backpack"
required-features = ["tf2"]

[[example]]
name = "inventory"
required-features = ["csgo"]
