[package]
name = "steam-vent"
version = "0.4.2"
authors = ["Robin Appelman <robin@icewind.nl>"]
edition = "2024"
description = "Interact with the Steam network via rust"
license = "MIT"
repository = "https://codeberg.org/steam-vent/steam-vent"
rust-version = "1.85.0"

[dependencies]
steam-vent-proto = "0.5.2"
steam-vent-crypto = { version = "0.2", path = "./crypto" }
tokio = { version = "1.49.0", features = ["net", "io-util", "macros", "io-std"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tokio-tungstenite = { version = "0.27.0", features = ["rustls-tls-webpki-roots"] }
rustls = "0.23.36"
webpki-roots = "1.0.6"
binrw = "0.15.0"
thiserror = "2.0.18"
bytes = "1.11.1"
protobuf = "=3.5.1"
bytemuck = { version = "1.25.0", features = ["derive"] }
crc = "3.4.0"
byteorder = "1.5.0"
flate2 = "1.1.9"
steamid-ng = "2.0.0"
futures-util = { version = "0.3.31", features = ["sink"] }
dashmap = "6.1.0"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls", "socks"] }
rsa = "0.9.10"
num-traits = "0.2.19"
num-bigint-dig = "0.8.6"
base64 = "0.22.1"
num_enum = "0.7.5"
directories = "6.0.0"
another-steam-totp = "0.4.2"
async-stream = "0.3.6"
rand = "0.9.2"
reqwest-websocket = "0.4.4"

[dev-dependencies]
tokio = { version = "1.49", features = ["macros", "rt", "rt-multi-thread"] }
tracing-subscriber = "0.3.22"
vdf-reader = "0.3.3"

[features]
tf2 = ["steam-vent-proto/tf2"]
csgo = ["steam-vent-proto/csgo"]
dota2 = ["steam-vent-proto/dota2"]

[[example]]
name = "backpack"
required-features = ["tf2"]

[[example]]
name = "inventory"
required-features = ["csgo"]
